--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="especialidades-box">
                         <i class="bi bi-wordpress"></i>
                         <h3>Programação</h3>
-                        <p>Python<br>HTML , CSS</p>
+                        <p>Python<br>HTML , CSS , JavaScript</p>
                     </div><!--especialidades-box-->
 
                     <div class="especialidades-box">
