--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
                     <div class="txt-sobre">
                         <h2>MUITO PRAZER, <span>SOU RAFAEL ESPIRITO SANTO SILVA.</span></h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit voluptatibus eos omnis ullam officiis.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati quae, dolores illo officiis a numquam.</p>
+                        <p>Trabalho com comprometimento e pró-atividade, utilizando minhas habilidades de TI para proporcionar resultados de excelência.</p>
+                        <p>Como profissional de TI, tenho habilidade em solucionar problemas complexos e atuo com agilidade para garantir a continuidade dos processos de TI.</p>
                         <div class="btn-social">
                             <a href="#"><button><i class="bi bi-instagram"></i></button></a>
                             <a href="#"><button><i class="bi bi-youtube"></i></button></a>
